--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*|5.*|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "4.2.*|5.*|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7|^9.5.10",
-        "orchestra/testbench": "3.7.*|^7.0"
+        "orchestra/testbench": "3.7.*|^7.0|^8.0"
     },
     "autoload": {
         "classmap": [
